# gl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: ShaderUtils.cpp  ShaderUtils.hpp  objmodel.cpp  objmodel.h
models/: monkey.blend
shaders/: simple.fsh  simple.vsh
